Atualizando página de EDA-2

--- a/ensino/eda2-2024-2.md
+++ b/ensino/eda2-2024-2.md
@@ -28,6 +28,27 @@ Clique <a href="plano_eda2_24_2.pdf" target="_blank">aqui</a> para acessar o pla
 
 ## Aulas
 
+* **Aula 25** (07/fev)
+  + Avaliação Somativa 3
+<br><br>
+* **Aula 24** (05/fev)
+<br><br>
+* **Aula 23** (31/jan)
+  + Grafos
+    + Implementação usando matriz e listas de adjacências
+<br><br>
+* **Aula 22** (29/jan)
+  + Grafos
+    + Representação usando matriz e listas de adjacências
+<br><br>
+* **Aula 21** (24/jan)
+<br><br>
+* **Aula 20** (22/jan)
+<br><br>
+* **Aula 19** (17/jan)
+<br><br>
+* **Aula 18** (15/jan)
+<br><br>
 * **Aula 17** (10/jan)
   + Avaliação Somativa 2
 <br><br>
