--- a/ensino/fac-2024-2.md
+++ b/ensino/fac-2024-2.md
@@ -23,6 +23,28 @@ Clique <a href="plano_fac_2024_2.pdf" target="_blank">aqui</a> para acessar o pl
 
 ## Aulas
 
+* **Aula 26** (12/fev)
+  + Avaliação Somativa 3
+<br><br>
+* **Aula 25** (07/fev)
+<br><br>
+* **Aula 24** (05/fev)
+<br><br>
+* **Aula 23** (31/jan)
+  + Pipeline: caminho de dados e controle
+<br><br>
+* **Aula 22** (29/jan)
+  + Pipeline: conceitos
+<br><br>
+* **Aula 21** (24/jan)
+  + Caminho de dados e controle para as instruções
+<br><br>
+* **Aula 20** (22/jan)
+<br><br>
+* **Aula 19** (17/jan)
+<br><br>
+* **Aula 18** (15/jan)
+<br><br>
 * **Aula 17** (10/jan)
   + Avaliação Somativa 2
 <br><br>
