Atualizando páginas de EDA-2 e FAC

--- a/ensino/fac-2024-2.md
+++ b/ensino/fac-2024-2.md
@@ -23,32 +23,60 @@ Clique <a href="plano_fac_2024_2.pdf" target="_blank">aqui</a> para acessar o pl
 
 ## Aulas
 
+* **Aula 29** (21/fev)
+  + Revisão de notas e faltas
+<br><br>
+* **Aula 28** (19/fev)
+  + Revisão de notas e faltas
+<br><br>
+* **Aula 27** (14/fev)
+  + Revisão de notas e faltas
+<br><br>
 * **Aula 26** (12/fev)
   + Avaliação Somativa 3
+    + Leitura recomendada do livro:
+      + Seção 3.5
+      + Seções 4.1 a 4.6
+      + Seções 5.1 a 5.4
+    + <a href="../slides_fac" target="_blank">Slides</a>
 <br><br>
 * **Aula 25** (07/fev)
 <br><br>
 * **Aula 24** (05/fev)
 <br><br>
 * **Aula 23** (31/jan)
-  + Pipeline: caminho de dados e controle
+  + Arquitetura do processador
+    + Pipeline: caminho de dados e controle
 <br><br>
 * **Aula 22** (29/jan)
-  + Pipeline: conceitos
+  + Arquitetura do processador
+    + Pipeline: conceitos
 <br><br>
 * **Aula 21** (24/jan)
-  + Caminho de dados e controle para as instruções
+  + Arquitetura do processador
+    + Caminho de dados e controle para as instruções
 <br><br>
 * **Aula 20** (22/jan)
+  + Arquitetura do processador
+    + Caminho de dados monociclo
+    + Elementos do caminho de dados
 <br><br>
 * **Aula 19** (17/jan)
+  + Representação de Ponto Flutuante
+    + Capacidade
+    + Padrão IEEE 754
+    + Operações em Assembly MIPS
 <br><br>
 * **Aula 18** (15/jan)
+  + Correção da Somativa 2
+  + Representação de Ponto Flutuante
+    + Formato de representação
 <br><br>
 * **Aula 17** (10/jan)
   + Avaliação Somativa 2
 <br><br>
 * **Aula 16** (08/jan)
+  + Revisão
 <br><br>
 * ~~**Aula 16** (20/dez)~~
   + Aula suspensa
