--- a/ensino/eda2-2024-2.md
+++ b/ensino/eda2-2024-2.md
@@ -28,6 +28,18 @@ Clique <a href="plano_eda2_24_2.pdf" target="_blank">aqui</a> para acessar o pla
 
 ## Aulas
 
+* **Aula 29** (21/fev)
+  + Revisão de notas e faltas
+<br><br>
+* **Aula 28** (19/fev)
+  + Revisão de notas e faltas
+<br><br>
+* **Aula 27** (14/fev)
+  + Revisão de notas e faltas
+<br><br>
+* **Aula 26** (12/fev)
+  + Revisão de notas e faltas
+<br><br>
 * **Aula 25** (07/fev)
   + Avaliação Somativa 3
 <br><br>
@@ -42,17 +54,27 @@ Clique <a href="plano_eda2_24_2.pdf" target="_blank">aqui</a> para acessar o pla
     + Representação usando matriz e listas de adjacências
 <br><br>
 * **Aula 21** (24/jan)
+  + Árvores Binárias de Busca Rubro-Negra Esquerdistas
+    + Casos de inserção e operações de correção
 <br><br>
 * **Aula 20** (22/jan)
+  + Árvores Binárias de Busca Rubro-Negra Esquerdistas
+    + Casos de inserção e operações de correção
 <br><br>
 * **Aula 19** (17/jan)
+  + Árvores Binárias de Busca Rubro-Negra Esquerdistas
+    + Definição e conceitos
 <br><br>
 * **Aula 18** (15/jan)
+  + Correção Avaliação Somativa 2
+  + Árvores Binárias de Busca Rubro-Negra Esquerdistas
+    + Introdução
 <br><br>
 * **Aula 17** (10/jan)
   + Avaliação Somativa 2
 <br><br>
 * **Aula 16** (08/jan)
+  + Revisão
 <br><br>
 * ~~**Aula 16** (20/dez)~~
   + Aula suspensa
