Atualizando página de FAC

--- a/ensino/fac-2024-2.md
+++ b/ensino/fac-2024-2.md
@@ -43,6 +43,16 @@ Clique <a href="plano_fac_2024_2.pdf" target="_blank">aqui</a> para acessar o pl
 * **Aula 25** (07/fev)
 <br><br>
 * **Aula 24** (05/fev)
+  + Hierarquia de memória
+    + Introdução
+    + Memória cache - mapeamento direto por bytes
+  + *Vídeos recomendados*:
+    + <a href="https://youtu.be/d059GZ3AoaE" target="_blank">Introdução à Hierarquia de Memória</a>
+    + <a href="https://youtu.be/512bP7JfgbA" target="_blank">Tecnologias de Memória</a>
+    + <a href="https://youtu.be/FzKE4INOgEo" target="_blank">Memória Cache (Parte 1)</a>
+    + <a href="https://youtu.be/YiLHBAWq_js" target="_blank">Memória Cache (Parte 2)</a>
+    + <a href="https://youtu.be/XD6rjTx1HZ4" target="_blank">Memória Cache (Parte 3)</a>
+    + <a href="https://youtu.be/efDFc78Y8hk" target="_blank">Memória Cache (Parte 4)</a>
 <br><br>
 * **Aula 23** (31/jan)
   + Arquitetura do processador
