Atualizando página de FAC

--- a/ensino/fac-2024-2.md
+++ b/ensino/fac-2024-2.md
@@ -41,6 +41,8 @@ Clique <a href="plano_fac_2024_2.pdf" target="_blank">aqui</a> para acessar o pl
     + <a href="../slides_fac" target="_blank">Slides</a>
 <br><br>
 * **Aula 25** (07/fev)
+  + Hierarquia de memória
+    + Memória cache - mapeamento direto por bytes e blocos
 <br><br>
 * **Aula 24** (05/fev)
   + Hierarquia de memória
