--- a/ensino/fac-2024-2.md
+++ b/ensino/fac-2024-2.md
@@ -21,6 +21,10 @@ exclude: true
 
 Clique <a href="plano_fac_2024_2.pdf" target="_blank">aqui</a> para acessar o plano de ensino.
 
+## Notas
+
+Clique [aqui](notas.htm) para visualizar as notas.
+
 ## Aulas
 
 * **Aula 29** (21/fev)
