--- a/ensino/eda2-2024-2.md
+++ b/ensino/eda2-2024-2.md
@@ -26,6 +26,10 @@ exclude: true
 
 Clique <a href="plano_eda2_24_2.pdf" target="_blank">aqui</a> para acessar o plano de ensino.
 
+## Notas
+
+Clique [aqui](notas.htm) para visualizar as notas.
+
 ## Aulas
 
 * **Aula 29** (21/fev)
