Atualizando página de EDA-1

--- a/ensino/eda1-2025-1.md
+++ b/ensino/eda1-2025-1.md
@@ -21,8 +21,26 @@ Clique <a href="plano_eda1_25_1.pdf" target="_blank">aqui</a> para acessar o pla
 
 ## Aulas
 
+* **Aula 5** (08/abr)
+<br><br>
+* **Aula 4** (03/abr)
+  + Dúvidas sobre a Avaliação Formativa 1
+<br><br>
+* **Aula 3** (01/abr)
+  + Introdução à complexidade computacional
+<br><br>
+* **Aula 2** (27/mar)
+  + Introdução à complexidade computacional
+    + Medidas de desempenho de algoritmos
+<br><br>
 * **Aula 1** (25/mar)
   + Apresentação da disciplina
+
+## Avaliações Formativas
+
+* **Formativa 1** - Revisão
+  + Acesso: <a href="https://moj.naquadah.com.br/cgi-bin/contest.sh/jl_eda1_f1_2025_1" target="_blank">CD-MOJ</a>
+  + Disponível até 11/abr às 23:59
 
 ## Referências básicas
 
