Atualizando página de EDA-1

--- a/ensino/eda1-2025-1.md
+++ b/ensino/eda1-2025-1.md
@@ -21,13 +21,24 @@ Clique <a href="plano_eda1_25_1.pdf" target="_blank">aqui</a> para acessar o pla
 
 ## Aulas
 
+* **Aula 5** (10/abr)
+<br><br>
 * **Aula 5** (08/abr)
+  + Introdução à complexidade computacional
+    + Casos comuns
 <br><br>
 * **Aula 4** (03/abr)
   + Dúvidas sobre a Avaliação Formativa 1
 <br><br>
 * **Aula 3** (01/abr)
   + Introdução à complexidade computacional
+    + Notação assintótica
+  + *Leitura recomendada*:
+    + <a href="https://www.ime.usp.br/~pf/analise_de_algoritmos/aulas/Oh.html" target="_blank">Comparação assintótica de funções</a> (Prof. Paulo Feofiloff)
+    + <a href="https://towardsdatascience.com/the-math-behind-big-o-and-other-asymptotic-notations-64487889f33f" target="_blank">A matemática por trás da notação Big-O</a>
+    + Problemas do milênio
+      + <a href="https://pt.wikipedia.org/wiki/Problemas_do_Pr%C3%A9mio_Millennium" target="_blank">Wikipedia</a>
+      + <a href="https://www.claymath.org/millennium-problems/" target="_blank">Página oficial</a>
 <br><br>
 * **Aula 2** (27/mar)
   + Introdução à complexidade computacional
