Atualizando página de EDA-1

--- a/ensino/eda1-2025-1.md
+++ b/ensino/eda1-2025-1.md
@@ -21,7 +21,16 @@ Clique <a href="plano_eda1_25_1.pdf" target="_blank">aqui</a> para acessar o pla
 
 ## Aulas
 
+* **Aula 7** (17/abr)
+<br><br>
+* **Aula 6** (15/abr)
+<br><br>
 * **Aula 5** (10/abr)
+  + Recursão
+    + Conceitos
+    + Exemplos: maior elemento de um vetor, exponenciação
+  + *Leitura recomendada*
+    + <a href="https://www.ime.usp.br/~pf/analise_de_algoritmos/aulas/recurrence.html#master-theorem" target="_blank">Teorema Mestre</a>
 <br><br>
 * **Aula 5** (08/abr)
   + Introdução à complexidade computacional
@@ -51,7 +60,7 @@ Clique <a href="plano_eda1_25_1.pdf" target="_blank">aqui</a> para acessar o pla
 
 * **Formativa 1** - Revisão
   + Acesso: <a href="https://moj.naquadah.com.br/cgi-bin/contest.sh/jl_eda1_f1_2025_1" target="_blank">CD-MOJ</a>
-  + Disponível até 11/abr às 23:59
+  + Disponível até ~~11/abr~~14/abr às 23:59
 
 ## Referências básicas
 
