Atualizando página de EDA-1

--- a/ensino/eda1-2025-1.md
+++ b/ensino/eda1-2025-1.md
@@ -21,9 +21,25 @@ Clique <a href="plano_eda1_25_1.pdf" target="_blank">aqui</a> para acessar o pla
 
 ## Aulas
 
-* **Aula 7** (17/abr)
+* **Aula 10** (06/mai)
+<br><br>
+* **Aula 9** (29/abr)
+  + Aplicações de ponteiros
+    + Alocação dinâmica de memória
+<br><br>
+* **Aula 8** (24/abr)
+  + Avaliação Somativa 1
+<br><br>
+* **Aula 7** (22/abr)
+  + Ponteiros
+    + Conceitos
+  + Resolução do problema [patinhos](patinhos.c) da Formativa 1.
+<br><br>
+* ~~**Aula 7** (17/abr)~~
+  + Ponto facultativo (quinta-feira santa)
 <br><br>
 * **Aula 6** (15/abr)
+  + Evento IBM
 <br><br>
 * **Aula 5** (10/abr)
   + Recursão
@@ -57,6 +73,10 @@ Clique <a href="plano_eda1_25_1.pdf" target="_blank">aqui</a> para acessar o pla
   + Apresentação da disciplina
 
 ## Avaliações Formativas
+
+* **Formativa 2** - Recursão
+  + Acesso: <a href="https://moj.naquadah.com.br/cgi-bin/contest.sh/jl_eda1_f2_2025_1" target="_blank">CD-MOJ</a>
+  + Disponível até 19/mai às 23:59
 
 * **Formativa 1** - Revisão
   + Acesso: <a href="https://moj.naquadah.com.br/cgi-bin/contest.sh/jl_eda1_f1_2025_1" target="_blank">CD-MOJ</a>
