Adicionando notas de EDA-1

--- a/ensino/eda1-2025-1.md
+++ b/ensino/eda1-2025-1.md
@@ -19,6 +19,10 @@ exclude: true
 
 Clique <a href="plano_eda1_25_1.pdf" target="_blank">aqui</a> para acessar o plano de ensino.
 
+## Notas
+
+Clique <a href="notas.htm" target="_blank">aqui</a> para visualizar as notas.
+
 ## Aulas
 
 * **Aula 10** (06/mai)
