--- a/ensino/eda1-2025-1.md
+++ b/ensino/eda1-2025-1.md
@@ -25,7 +25,29 @@ Clique <a href="notas.htm" target="_blank">aqui</a> para visualizar as notas.
 
 ## Aulas
 
+* **Aula 13** (15/mai)
+<br><br>
+* **Aula 12** (13/mai)
+  + Ordenação
+    + Ordenação por inserção
+    + Ordenação por seleção
+    + Estabilidade
+  + *Material recomendado*:
+    + <a href="https://www.ime.usp.br/~pf/algoritmos/aulas/ordena.html" target="_blank">Algoritmos de ordenação elementares</a> (Prof. Paulo Feofiloff)
+    + <a href="https://visualgo.net/en/sorting" target="_blank">Visualgo</a>
+    + <a href="https://desciclopedia.org/wiki/Programa%C3%A7%C3%A3o_Orientada_a_Gambiarras" target="_blank">POG</a>
+<br><br>
+* **Aula 11** (08/mai)
+  + O problema de busca
+    + Busca geral e algoritmo de busca sequencial
+    + Busca num conjunto ordenado: busca binária
+  + *Leitura recomendada*: <a href="https://www.ime.usp.br/~pf/algoritmos/aulas/bubi.html" target="_blank">Busca em vetor ordenado</a> (Prof. Paulo Feofiloff)
+<br><br>
 * **Aula 10** (06/mai)
+  + Aplicações de ponteiros
+    + Passagem de parâmetros por referência
+    + Ponteiros e vetores
+    + Ponteiros para funções
 <br><br>
 * **Aula 9** (29/abr)
   + Aplicações de ponteiros
