Atualizando página de EDA-1

--- a/ensino/eda1-2025-1.md
+++ b/ensino/eda1-2025-1.md
@@ -25,7 +25,33 @@ Clique <a href="notas.htm" target="_blank">aqui</a> para visualizar as notas.
 
 ## Aulas
 
+* **Aula 20** (10/mai)
+  + Avaliação Somativa 2 (Grupo 2 - Sala S10)
+<br><br>
+* **Aula 19** (05/mai)
+  + Avaliação Somativa 2 (Grupo 1 - Sala S10)
+<br><br>
+* **Aula 18** (03/mai)
+<br><br>
+* **Aula 17** (29/mai)
+<br><br>
+* **Aula 16** (27/mai)
+<br><br>
+* **Aula 15** (22/mai)
+  + Quickselect
+  + *Leitura recomendada*
+    + <a href="https://en.m.wikipedia.org/wiki/Quickselect" target="_blank">Quickselect (Wikipedia)</a>
+    + <a href="https://stackoverflow.com/questions/56940793/quickselect-time-complexity-explained" target="_blank">Sobre a complexidade do Quickselect</a>
+<br><br>
+* **Aula 14** (20/mai)
+  + Ordenação rápida (Quicksort)
+  + *Leitura recomendada*
+    + <a href="https://www.ime.usp.br/~pf/algoritmos/aulas/quick.html" target="_blank">Quicksort</a> (Prof. Paulo Feofiloff)
+<br><br>
 * **Aula 13** (15/mai)
+  + Ordenação por intercalação (Mergesort)
+  + *Leitura recomendada*
+    + <a href="https://www.ime.usp.br/~pf/algoritmos/aulas/mrgsrt.html" target="_blank">Mergesort</a> (Prof. Paulo Feofiloff)
 <br><br>
 * **Aula 12** (13/mai)
   + Ordenação
@@ -99,6 +125,10 @@ Clique <a href="notas.htm" target="_blank">aqui</a> para visualizar as notas.
   + Apresentação da disciplina
 
 ## Avaliações Formativas
+
+* **Formativa 3** - Busca e Ordenação
+  + Acesso: <a href="https://moj.naquadah.com.br/cgi-bin/contest.sh/jl_eda1_f3_2025_1" target="_blank">CD-MOJ</a>
+  + Disponível até 04/jun às 23:59
 
 * **Formativa 2** - Recursão
   + Acesso: <a href="https://moj.naquadah.com.br/cgi-bin/contest.sh/jl_eda1_f2_2025_1" target="_blank">CD-MOJ</a>
