--- a/ensino/eda1-2025-1.md
+++ b/ensino/eda1-2025-1.md
@@ -26,10 +26,10 @@ Clique <a href="notas.htm" target="_blank">aqui</a> para visualizar as notas.
 ## Aulas
 
 * **Aula 20** (10/mai)
-  + Avaliação Somativa 2 (Grupo 2 - Sala S10)
+  + Avaliação Somativa 2 ([Grupo 2](grupo2_somativa2.txt) - Sala S10)
 <br><br>
 * **Aula 19** (05/mai)
-  + Avaliação Somativa 2 (Grupo 1 - Sala S10)
+  + Avaliação Somativa 2 ([Grupo 1](grupo1_somativa2.txt) - Sala S10)
 <br><br>
 * **Aula 18** (03/mai)
 <br><br>
