Atualizando página de EDA-1

--- a/ensino/eda1-2025-1.md
+++ b/ensino/eda1-2025-1.md
@@ -45,8 +45,10 @@ Clique <a href="notas.htm" target="_blank">aqui</a> para visualizar as notas.
 <br><br>
 * **Aula 15** (20/mai)
   + Ordenação rápida (Quicksort)
-  + *Leitura recomendada*
+  + *Leitura recomendada*:
     + <a href="https://www.ime.usp.br/~pf/algoritmos/aulas/quick.html" target="_blank">Quicksort</a> (Prof. Paulo Feofiloff)
+  + *Material recomendado*:
+    + <a href="https://github.com/bcribas/benchmark-ordenacao" target="_blank">Benchmarking de ordenação</a> (Prof. Bruno Ribas)
 <br><br>
 * **Aula 14** (15/mai)
   + Ordenação por intercalação (Mergesort)
