--- a/ensino/eda1-2025-1.md
+++ b/ensino/eda1-2025-1.md
@@ -25,17 +25,22 @@ Clique <a href="notas.htm" target="_blank">aqui</a> para visualizar as notas.
 
 ## Aulas
 
-* **Aula 21** (10/mai)
+* **Aula 21** (10/jun)
   + Avaliação Somativa 2 ([Grupo 2](grupo2_somativa2.txt) - Sala S10)
 <br><br>
-* **Aula 20** (05/mai)
+* **Aula 20** (05/jun)
   + Avaliação Somativa 2 ([Grupo 1](grupo1_somativa2.txt) - Sala S10)
 <br><br>
-* **Aula 19** (03/mai)
+* **Aula 19** (03/jun)
+  + Dúvidas
 <br><br>
 * **Aula 18** (29/mai)
+  + Listas encadeadas
+    + Definição
+    + Implementação das operações
 <br><br>
 * **Aula 17** (27/mai)
+  + Ordenação por contagem
 <br><br>
 * **Aula 16** (22/mai)
   + Quickselect
