Atualizando página de EDA-1

--- a/ensino/eda1-2025-1.md
+++ b/ensino/eda1-2025-1.md
@@ -25,6 +25,19 @@ Clique <a href="notas.htm" target="_blank">aqui</a> para visualizar as notas.
 
 ## Aulas
 
+* **Aula 24** (24/jun)
+<br><br>
+* **Aula 23** (17/jun)
+  + Pilhas: aplicações
+  + *Recomendado*:
+    + <a href="https://www.youtube.com/watch?v=Zn5bycn64pE&list=PLzZut2slkqyyeiom6x9P6KZFZEXSscUTl&pp=0gcJCWMEOCosWNin" target="_blank">Video: scanf detonado</a> (Prof. Bruno Ribas)
+<br><br>
+* **Aula 22** (12/jun)
+  + Pilhas
+    + Definição
+    + Implementação usando vetores e listas encadeadas
+  + *Leitura recomendada*: <a href="https://www.ime.usp.br/~pf/algoritmos/aulas/pilha.html" target="_blank">Pilhas</a> (Prof. Paulo Feofiloff)
+<br><br>
 * **Aula 21** (10/jun)
   + Avaliação Somativa 2 ([Grupo 2](grupo2_somativa2.txt) - Sala S10)
 <br><br>
@@ -135,7 +148,7 @@ Clique <a href="notas.htm" target="_blank">aqui</a> para visualizar as notas.
 
 * **Formativa 3** - Busca e Ordenação
   + Acesso: <a href="https://moj.naquadah.com.br/cgi-bin/contest.sh/jl_eda1_f3_2025_1" target="_blank">CD-MOJ</a>
-  + Disponível até 04/jun às 23:59
+  + Disponível até ~~04/jun~~22/jun às 23:59
 
 * **Formativa 2** - Recursão
   + Acesso: <a href="https://moj.naquadah.com.br/cgi-bin/contest.sh/jl_eda1_f2_2025_1" target="_blank">CD-MOJ</a>
