Atualizando página de EDA-1

--- a/ensino/eda1-2025-1.md
+++ b/ensino/eda1-2025-1.md
@@ -146,6 +146,10 @@ Clique <a href="notas.htm" target="_blank">aqui</a> para visualizar as notas.
 
 ## Avaliações Formativas
 
+* **Formativa 4** - Listas encadeadas, Pilhas e Filas
+  + Acesso: <a href="https://moj.naquadah.com.br/cgi-bin/contest.sh/jl_eda1_f4_2025_1" target="_blank">CD-MOJ</a>
+  + Disponível até 06/jul às 23:59
+
 * **Formativa 3** - Busca e Ordenação
   + Acesso: <a href="https://moj.naquadah.com.br/cgi-bin/contest.sh/jl_eda1_f3_2025_1" target="_blank">CD-MOJ</a>
   + Disponível até ~~04/jun~~22/jun às 23:59
