--- a/ensino/eda1-2025-1.md
+++ b/ensino/eda1-2025-1.md
@@ -25,7 +25,30 @@ Clique <a href="notas.htm" target="_blank">aqui</a> para visualizar as notas.
 
 ## Aulas
 
+* **Aula 32** (24/jul)
+<br><br>
+* **Aula 31** (22/jul)
+<br><br>
+* **Aula 30** (17/jul)
+<br><br>
+* **Aula 29** (15/jul)
+<br><br>
+* ~~**Aula 29** (10/jul)~~
+  + Não haverá aula
+<br><br>
+* **Aula 28** (08/jul)
+<br><br>
+* **Aula 27** (03/jul)
+<br><br>
+* **Aula 26** (01/jul)
+<br><br>
+* **Aula 25** (26/jun)
+  + Filas: implementação
+  + Ordenação por distribuição
+<br><br>
 * **Aula 24** (24/jun)
+  + Filas: implementação
+  + *Leitura recomendada*: <a href="https://www.ime.usp.br/~pf/algoritmos/aulas/fila.html" target="_blank">Filas</a> (Prof. Paulo Feofiloff)
 <br><br>
 * **Aula 23** (17/jun)
   + Pilhas: aplicações
