Atualizando página de EDA-1

--- a/ensino/eda1-2025-1.md
+++ b/ensino/eda1-2025-1.md
@@ -25,22 +25,30 @@ Clique <a href="notas.htm" target="_blank">aqui</a> para visualizar as notas.
 
 ## Aulas
 
-* **Aula 32** (24/jul)
+* **Aula 33** (24/jul)
+  + Recuperação (Sala I10)
 <br><br>
-* **Aula 31** (22/jul)
+* **Aula 32** (22/jul)
+  + Avaliação Substitutiva (Sala I10)
 <br><br>
-* **Aula 30** (17/jul)
+* **Aula 31** (17/jul)
+  + Avaliação Somativa 3 ([Grupo 2](grupo2_somativa3.txt) - Sala I10)
 <br><br>
-* **Aula 29** (15/jul)
+* **Aula 30** (15/jul)
+  + Avaliação Somativa 3 ([Grupo 1](grupo1_somativa3.txt) - Sala I10)
 <br><br>
-* ~~**Aula 29** (10/jul)~~
+* **Aula 29** (10/jul)
   + Não haverá aula
 <br><br>
 * **Aula 28** (08/jul)
 <br><br>
 * **Aula 27** (03/jul)
+  + Árvores: percursos em profundidade e em largura
+  + Árvores binárias de busca (inserção)
+  + *Leitura recomendada*: <a href="https://www.ime.usp.br/~pf/algoritmos/aulas/binst.html" target="_blank">Árvores</a> (Prof. Paulo Feofiloff)
 <br><br>
 * **Aula 26** (01/jul)
+  + Árvores: definições, conceitos e implementação
 <br><br>
 * **Aula 25** (26/jun)
   + Filas: implementação
