--- a/ensino/eda1-2025-1.md
+++ b/ensino/eda1-2025-1.md
@@ -38,7 +38,7 @@ Clique <a href="notas.htm" target="_blank">aqui</a> para visualizar as notas.
   + Avaliação Somativa 3 ([Grupo 1](grupo1_somativa3.txt) - Sala I10)
 <br><br>
 * **Aula 29** (10/jul)
-  + Aula em laboratório com os monitores (I10)
+  + Aula em laboratório com os monitores (Sala I10)
     + Acesse aqui a [imagem](https://unbbr-my.sharepoint.com/:i:/g/personal/john_gardenghi_unb_br/ESoG1ibGzaZMkiQe-f0gs00BM7qFjJk5jEFDoQIhQeU-1w?e=yIWmjv) do MaratonaLinux
     + Salve a imagem num pendrive usando o [balenaEtcher](https://etcher.balena.io/)
 <br><br>
