--- a/ensino/eda1-2025-1.md
+++ b/ensino/eda1-2025-1.md
@@ -39,8 +39,9 @@ Clique <a href="notas.htm" target="_blank">aqui</a> para visualizar as notas.
 <br><br>
 * **Aula 29** (10/jul)
   + Aula em laboratório com os monitores (Sala I10)
-    + Acesse aqui a [imagem](https://unbbr-my.sharepoint.com/:i:/g/personal/john_gardenghi_unb_br/ESoG1ibGzaZMkiQe-f0gs00BM7qFjJk5jEFDoQIhQeU-1w?e=yIWmjv) do MaratonaLinux
-    + Salve a imagem num pendrive usando o [balenaEtcher](https://etcher.balena.io/)
+    + Acesse aqui a <a href="https://unbbr-my.sharepoint.com/:i:/g/personal/john_gardenghi_unb_br/ESoG1ibGzaZMkiQe-f0gs00BM7qFjJk5jEFDoQIhQeU-1w?e=yIWmjv" target="_blank">imagem do MaratonaLinux</a>
+    + Salve a imagem num pendrive usando o <a href="https://etcher.balena.io/" target="_blank">balenaEtcher</a>
+    + Inicialize seu computador do pendrive
 <br><br>
 * **Aula 28** (08/jul)
 <br><br>
