Atualizando página de EDA-1

--- a/ensino/eda1-2025-1.md
+++ b/ensino/eda1-2025-1.md
@@ -44,6 +44,7 @@ Clique <a href="notas.htm" target="_blank">aqui</a> para visualizar as notas.
     + Inicialize seu computador do pendrive
 <br><br>
 * **Aula 28** (08/jul)
+  + Árvores binárias de busca (remoção)
 <br><br>
 * **Aula 27** (03/jul)
   + Árvores: percursos em profundidade e em largura
