--- a/ensino/eda1-2025-1.md
+++ b/ensino/eda1-2025-1.md
@@ -26,10 +26,10 @@ Clique <a href="notas.htm" target="_blank">aqui</a> para visualizar as notas.
 ## Aulas
 
 * **Aula 33** (24/jul)
-  + Recuperação (Sala I10)
+  + Recuperação (Sala S10)
 <br><br>
 * **Aula 32** (22/jul)
-  + Avaliação Substitutiva (Sala I10)
+  + Avaliação Substitutiva (Sala S10)
 <br><br>
 * **Aula 31** (17/jul)
   + Avaliação Somativa 3 ([Grupo 2](grupo2_somativa3.txt) - Sala I10)
