Atualizando plano de ensino de EDA-2

--- a/ensino/eda2-2025-2.md
+++ b/ensino/eda2-2025-2.md
@@ -179,6 +179,8 @@ Clique [aqui](notas.htm) para visualizar as notas.
 
 ## Referências básicas
 
+* <a href="https://github.com/edsomjr/TEP/blob/master/Estruturas_de_Dados/README.md" target="_blank">Estruturas de Dados</a> (Prof. Edson Alves)
+<br><br>
 * <a href="https://www.ime.usp.br/~pf/algoritmos/index.html" target="_blank">Projeto de Algoritmos</a> (Prof. Paulo Feofiloff)
 <br><br>
 * <a href="https://www.ic.unicamp.br/~rafael/mc202.html" target="_blank">Estruturas de dados</a> (Prof. Rafael Schouery)
