Atualizando página de EDA-2

--- a/ensino/eda2-2025-2.md
+++ b/ensino/eda2-2025-2.md
@@ -129,52 +129,39 @@ Clique [aqui](notas.htm) para visualizar as notas.
       + <a href="https://pt.wikipedia.org/wiki/Primo_de_Mersenne" target="_blank">Wikipedia</a>
       + <a href="https://impa.br/noticias/numeros-primos-de-mersenne-visando-o-infinito/">Prof. Marcelo Viana</a>
 <br><br>
-* **Aula 6** (01/nov)
-  + O problema de busca
-    + Busca sequencial
-    + Busca binária
-  + Tabelas de dispersão (hashing)
-    + Endereçamento direto
-<br><br>
-* **Aula 5** (30/out)
-  + Ordenação rápida (QuickSort)
-  + Quickselect
-  + *Leitura recomendada*
-    + QuickSelect
-      + <a href="https://www.brunoribas.com.br/apostila-eda/quicksort.html#org1aec290" target="_blank">Prof. Bruno Ribas</a>
-      + <a href="https://www.geeksforgeeks.org/quickselect-algorithm/" target="_blank">Geeks for geeks</a>
-<br><br>
-* **Aula 4** (25/out)
-  + Ordenação rápida (QuickSort)
-  + *Leitura recomendada*
-    + <a href="">Prof. Paulo Feofiloff</a>
-    + <a href="https://www.brunoribas.com.br/apostila-eda/quicksort.html" target="_blank">Prof. Bruno Ribas</a>
-    + <a href="https://www.ic.unicamp.br/~rafael/slides/mc202/unidade20-ordenacao-merge-quick.pdf" target="_blank">Prof. Rafael Schouery</a> (<a href="https://www.ic.unicamp.br/~rafael/slides/mc202/unidade20-ordenacao-merge-quick-handout.pdf" target="_blank">handouts</a>)
-    + <a href="https://www.geeksforgeeks.org/quick-sort/" target="_blank">Geeks for geeks</a>
-<br><br>
-* **Aula 3** (23/out)
-  + Ordenação por intercalação
-  + *Leitura recomendada*
-    + <a href="https://www.ime.usp.br/~pf/algoritmos/aulas/mrgsrt.html" target="_blank">Prof. Paulo Feofiloff</a>
-    + <a href="https://www.ic.unicamp.br/~rafael/slides/mc202/unidade20-ordenacao-merge-quick.pdf" target="_blank">Prof. Rafael Schouery</a> (<a href="https://www.ic.unicamp.br/~rafael/slides/mc202/unidade20-ordenacao-merge-quick-handout.pdf" target="_blank">handouts</a>)
-    + <a href="https://www.brunoribas.com.br/apostila-eda/mergesort.html" target="_blank">Prof. Bruno Ribas</a>
-<br><br>
-* **Aula 2** (18/out)
-  + Revisão
-    + Análise de complexidade
-    + Classes de complexidade (P e NP)
-    + Listas encadeadas
-  + *Leitura recomendada*
-    + <a href="https://www.ime.usp.br/~pf/analise_de_algoritmos/aulas/Oh.html" target="_blank">Comparação assintótica de funções</a> (Prof. Paulo Feofiloff)
-    + <a href="https://towardsdatascience.com/the-math-behind-big-o-and-other-asymptotic-notations-64487889f33f" target="_blank">A matemática por trás da notação Big-O</a>
-    + <a href="https://www.ime.usp.br/~pf/algoritmos/aulas/lista.html" target="_blank">Listas encadeadas</a> (Prof. Paulo Feofiloff)
-    + <a href="https://www.brunoribas.com.br/apostila-eda/lista-encadeada.html" target="_blank">Exercícios de listas encadeadas</a>
-    + Problemas do milênio
-      + <a href="https://pt.wikipedia.org/wiki/Problemas_do_Pr%C3%A9mio_Millennium" target="_blank">Wikipedia</a>
-      + <a href="https://www.claymath.org/millennium-problems/" target="_blank">Página oficial</a>
-<br><br>
 -->
-* **Aula 1** (16/out)
+* **Aula 6** (04/set)
+  + Árvores Binárias de Busca
+    + Remoção
+<br><br>
+* **Aula 5** (02/set)
+  + Árvores Binárias de Busca
+    + Conceitos
+    + Busca
+    + Máximo e Mínimo
+    + Antecessor e Sucessor
+    + Inserção
+  + *Leitura recomendada*
+    + <a href="https://www.ic.unicamp.br/~rafael/slides/mc202/unidade16-arvores-busca-handout.pdf" target="_blank">Árvores Binárias de Busca</a> (Prof. Rafael Schouery)
+<br><br>
+* **Aula 4** (28/out)
+  + Árvores Binárias
+    + Percursos em Largura e Profundidade (pré-ordem, em ordem e pós-ordem)
+  + *Leitura recomendada*
+    + <a href="https://www.ime.usp.br/~pf/algoritmos/aulas/bint.html" target="_blank">Árvores Binárias</a> (Prof. Paulo Feofiloff)
+    + <a href="https://www.ic.unicamp.br/~rafael/slides/mc202/unidade15-arvores-binarias-handout.pdf" target="_blank">Árvores Binárias</a> (Prof. Rafael Sch<br><br>
+* **Aula 3** (26/ago)
+  + Árvores: conceitos e implementação
+ouery)
+<br><br>
+* **Aula 2** (21/ago)
+  + Revisão
+    + Algoritmos de Ordenação e Busca
+      + MergeSort
+      + QuickSort
+      + Busca Sequencial e Busca Binária
+<br><br>
+* **Aula 1** (19/ago)
   + Apresentação da disciplina
 
 ## Referências básicas
