Atualizando página de EDA-2

--- a/ensino/eda2-2025-2.md
+++ b/ensino/eda2-2025-2.md
@@ -144,7 +144,7 @@ Clique [aqui](notas.htm) para visualizar as notas.
   + *Leitura recomendada*
     + <a href="https://www.ic.unicamp.br/~rafael/slides/mc202/unidade16-arvores-busca-handout.pdf" target="_blank">Árvores Binárias de Busca</a> (Prof. Rafael Schouery)
 <br><br>
-* **Aula 4** (28/out)
+* **Aula 4** (28/ago)
   + Árvores Binárias
     + Percursos em Largura e Profundidade (pré-ordem, em ordem e pós-ordem)
   + *Leitura recomendada*
