Atualizando página de EDA-2

--- a/ensino/eda2-2025-2.md
+++ b/ensino/eda2-2025-2.md
@@ -133,7 +133,8 @@ Clique [aqui](notas.htm) para visualizar as notas.
 * **Aula 6** (04/set)
   + Árvores Binárias de Busca
     + Remoção
-<br><br>
+  + *Leitura recomendada*
+    + <a href="https://www.ic.unicamp.br/~rafael/slides/mc202/unidade16-arvores-busca-handout.pdf" target="_blank">Árvores Binárias de Busca</a> (Prof. Rafa<br><br>
 * **Aula 5** (02/set)
   + Árvores Binárias de Busca
     + Conceitos
@@ -149,7 +150,8 @@ Clique [aqui](notas.htm) para visualizar as notas.
     + Percursos em Largura e Profundidade (pré-ordem, em ordem e pós-ordem)
   + *Leitura recomendada*
     + <a href="https://www.ime.usp.br/~pf/algoritmos/aulas/bint.html" target="_blank">Árvores Binárias</a> (Prof. Paulo Feofiloff)
-    + <a href="https://www.ic.unicamp.br/~rafael/slides/mc202/unidade15-arvores-binarias-handout.pdf" target="_blank">Árvores Binárias</a> (Prof. Rafael Sch<br><br>
+    + <a href="https://www.ic.unicamp.br/~rafael/slides/mc202/unidade15-arvores-binarias-handout.pdf" target="_blank">Árvores Binárias</a> (Prof. Rafael Schouery)
+<br><br>
 * **Aula 3** (26/ago)
   + Árvores: conceitos e implementação
 ouery)
