Atualizando página de EDA-2

--- a/ensino/eda2-2025-2.md
+++ b/ensino/eda2-2025-2.md
@@ -134,7 +134,8 @@ Clique [aqui](notas.htm) para visualizar as notas.
   + Árvores Binárias de Busca
     + Remoção
   + *Leitura recomendada*
-    + <a href="https://www.ic.unicamp.br/~rafael/slides/mc202/unidade16-arvores-busca-handout.pdf" target="_blank">Árvores Binárias de Busca</a> (Prof. Rafa<br><br>
+    + <a href="https://www.ic.unicamp.br/~rafael/slides/mc202/unidade16-arvores-busca-handout.pdf" target="_blank">Árvores Binárias de Busca</a> (Prof. Rafael Schouery)
+<br><br>
 * **Aula 5** (02/set)
   + Árvores Binárias de Busca
     + Conceitos
