--- a/ensino/eda1-2025-2.md
+++ b/ensino/eda1-2025-2.md
@@ -19,13 +19,13 @@ exclude: true
 
 Clique <a href="plano_eda1_25_2.pdf" target="_blank">aqui</a> para acessar o plano de ensino.
 
-<!--
 ## Notas
 
 Clique <a href="notas.htm" target="_blank">aqui</a> para visualizar as notas.
--->
 
 ## Aulas
+
+Consultar turma virtual no SIGAA para o andamento das aulas.
 
 <!--
 * **Aula 33** (24/jul)
@@ -179,9 +179,9 @@ Clique <a href="notas.htm" target="_blank">aqui</a> para visualizar as notas.
   + Introdução à complexidade computacional
     + Medidas de desempenho de algoritmos
 <br><br>
--->
 * **Aula 1** (19/ago)
   + Apresentação da disciplina
+-->
 
 ## Referências básicas
 
